--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-scripts": "0.9.3"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
+    "font-awesome": "^4.7.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "uuid": "^3.0.1"
